# darkbid

./: .gitignore  ANALYSIS_AND_STEPS.md  CLAIM_TOKEN_IMPLEMENTATION.md  COMPLETE_DEV_INTEGRATION.md  COMPLETION_SUMMARY.md  DEV2_ZK_INTEGRATION.md  DEVELOPER_GUIDE.md  DEV_INTEGRATION_GUIDE.md  DOCUMENTATION_INDEX.md  Dev3_FINAL_SUMMARY.md  Dev3_SUMMARY.md  HANDOFF_SUMMARY.md  IMPLEMENTATION_STATUS.md  README.md  TEAM_STATUS.md  WALLET_DEBUG.md  WALLET_FIX_COMPLETE.md  WALLET_IMPROVEMENTS.md  WALLET_QUICK_FIX.md  WALLET_SETUP.md  ZK_IMPLEMENTATION.md  ZK_QUICKSTART.md  check-auction.js  error.txt  index.html  init-auction-simple.js  init-auction.js  init-auction.ts  init-final.js  package-lock.json  package.json  tailwind.config.js  test-build.js  vite.config.js
.cargo/: config.toml
anchor-prg/: Anchor.toml
anchor-prg/programs/darkbid/: Cargo.toml
anchor-prg/programs/darkbid/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
anchor-prg/programs/darkbid/src/instructions/: claim_token.rs  commit_bid.rs  mod.rs  (+4 more)
circuits/bid_range/: bid_range.circom
dbit/: .env.example  Cargo.toml  Dockerfile  README.md  migrate.sh
dbit/.sqlx/: query-286a3ef3a4617c478dbc4e1b2b5af7d075d57c0c540da6d554f733af6d958b97.json  query-35e7ad7b6048823eff77561c0ab819516663cbc7d3d271d91af4cbf036554d0d.json  query-3928302fafdf3f35818bf7519ea2589d5cab00308ca12db40444ca98977391a2.json  query-68e599bde6c4d59b596b54dd8fe047b605f3e17937b84bd6e7ba2cce3b806f66.json  query-ec0b8fbfd2caef3f2a30acd14b59341cea30e08c8f20dc4551fa73aea65396d3.json
dbit/migrations/: 0001_init.sql  0002_zk.sql  0003_auth_nonces.sql
dbit/src/: app.rs  config.rs  errors.rs  lib.rs  main.rs  state.rs
dbit/src/api/: auctions.rs  auth.rs  bids.rs  mod.rs
dbit/src/db/: mod.rs  models.rs  queries.rs
dbit/src/domain/: auction.rs  bid.rs  mod.rs  user.rs
dbit/src/jobs/: mod.rs  scheduler.rs
dbit/src/middlewares/: auth.rs
dbit/src/solana/: verify.rs
dbit/src/utils/: hashing.rs  mod.rs
dbit/src/zk/: mod.rs  proof.rs  types.rs
dbit/tests/: integration.rs
public/: test-zk-proof.html
scripts/: setup-circuit.js  test-proving.js
src/: App.jsx  index.css  main.jsx
src/components/auction/: ActivityFeed.jsx  AuctionCard.jsx  BidForm.jsx  CountdownTimer.jsx  RevealPanel.jsx  WinnerPanel.jsx
src/components/layout/: Footer.jsx  Navbar.jsx
src/components/shared/: BlackHoleCanvas.jsx  ConfettiBurst.jsx  PageTransition.jsx  ProtectedRoute.jsx  Toast.jsx  WalletButton.jsx
src/hooks/: useAuction.js  useAuth.js  useAuth.jsx  useClaimToken.js  useClaimTokens.js  useCountdown.js  useDarkBidProgram.js  useDiagnostics.js  usePhantomAuth.jsx  usePlaceBid.js  useRefund.js  useReplaceBid.js  useRevealBid.js  useWalletAuth.jsx  useWalletInfo.js
src/lib/: api.js  commit.js  constants.js  darkbid.json  pdaUtils.js  proof-generator.js  tokenManager.js
src/pages/: Auction.jsx  Dashboard.jsx  Landing.jsx  Launch.jsx  Login.jsx  Register.jsx
src/styles/: globals.css
